# ferbaq_crm

./: .gitignore  Dockerfile  README.md  activar.ps1  docker-compose.yml  envExample  pyproject.toml  requirements.txt  run_simple_worker.py  test-protection.txt
.github/workflows/: deploy-dev.yml  deploy.yml
activity_log/: admin.py  forms.py  models.py  serializers.py  urls.py  viewsets.py
activity_log/migrations/: 0001_initial.py  0002_create_roles_permissions_activity_log.py
activity_log/services/: activity_log_service.py  factories.py  interfaces.py
catalog/: admin.py  apps.py  constants.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
client/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
contact/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
core/: apps.py  di.py  modules.py  settings.py  urls.py  views.py
middleware/: cache_user_groups.py  sql_debug.py
objetive/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
opportunity/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  sharepoint.py  signals.py  tasks.py  test_write.py  urls.py  viewsets.py
project/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
purchase/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
(+68 files in other folders)
