[project]
name = "ferbaq-crm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Villanueva",email = "ricardo.villanueva@ferbaq.com.mx"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "django[gis] (>=5.2.2,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "injector (>=0.22.0,<0.23.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-model-utils (>=5.0.0,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "django-rq (>=3.0.1,<4.0.0)",
    "office365-rest-python-client (==2.6.2)",
    "django-simple-history (>=3.10.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
